welcome.lessons.welcome.array.island.Island.scala.error
island:1: error: Missing closing brace `}' assumed here
def maxValue(nums:Array[Int]): Int = {
^